--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -3,7 +3,7 @@ on:
   push: # 触发机制为push操作11
     branches: main
   schedule: # 触发机制为定时任务
-    - cron: "0/5 * * * *" # 每天4点44分自动执行
+    - cron: "0 0/12 * * *" # 每天4点44分自动执行
 jobs:
   autosend:
     runs-on: ubuntu-latest # 运行环境为最新的Ubuntu
